unpackaged/main/default/objects/Account/fields/ACBL_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ACBL_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACBL Checkbox</label>
    <type>Checkbox</type>
</CustomField>