unpackaged/main/default/objects/Account/fields/Account_Pipeline_Demo__c.field-meta.xml
<CustomField>
    <fullName>Account_Pipeline_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pipeline Demo</description>
    <label>Account Pipeline Demo</label>
    <type>Checkbox</type>
</CustomField>