unpackaged/main/default/objects/Account/fields/AE_Team_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>AE_Team_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Team Checkbox</label>
    <type>Checkbox</type>
</CustomField>