unpackaged/main/default/objects/Account/fields/Apex_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Apex_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Checkbox</label>
    <type>Checkbox</type>
</CustomField>