unpackaged/main/default/objects/Account/fields/Beta_bionics_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Beta_bionics_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beta bionics checkbox</label>
    <type>Checkbox</type>
</CustomField>