unpackaged/main/default/objects/Account/fields/Blueprint_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Blueprint_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blueprint Checkbox</label>
    <type>Checkbox</type>
</CustomField>