unpackaged/main/default/objects/Account/fields/Brookhurst_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Brookhurst_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brookhurst Checkbox</label>
    <type>Checkbox</type>
</CustomField>