unpackaged/main/default/objects/Account/fields/CastoInfo_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>CastoInfo_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CastoInfo Checkbox</label>
    <type>Checkbox</type>
</CustomField>