unpackaged/main/default/objects/Account/fields/CCV_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>CCV_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCV Checkbox</label>
    <type>Checkbox</type>
</CustomField>