unpackaged/main/default/objects/Account/fields/Churn_risk_hotfix__c.field-meta.xml
<CustomField>
    <fullName>Churn_risk_hotfix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Churn_risk_hotfix</description>
    <label>Churn risk hotfix</label>
    <type>Checkbox</type>
</CustomField>