unpackaged/main/default/objects/Account/fields/Clayton_Update__c.field-meta.xml
<CustomField>
    <fullName>Clayton_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clayton update</label>
    <type>Checkbox</type>
</CustomField>