unpackaged/main/default/objects/Account/fields/Clyde_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Clyde_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clyde Checkbox</label>
    <type>Checkbox</type>
</CustomField>