unpackaged/main/default/objects/Account/fields/Demo_checkbox_1__c.field-meta.xml
<CustomField>
    <fullName>Demo_checkbox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo checkbox 1</label>
    <type>Checkbox</type>
</CustomField>