unpackaged/main/default/objects/Account/fields/Dominion_Group_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Dominion_Group_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dominion Group Checkbox</label>
    <type>Checkbox</type>
</CustomField>