unpackaged/main/default/objects/Account/fields/Expansion_Review_Flag__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Review_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the account has been flagged for expansion review due to employee count growth exceeding 1,000.</description>
    <label>Expansion Review Flag</label>
    <type>Checkbox</type>
</CustomField>