unpackaged/main/default/objects/Account/fields/Fictiv_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Fictiv_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fictiv Checkbox</label>
    <type>Checkbox</type>
</CustomField>