unpackaged/main/default/objects/Account/fields/InCharge_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>InCharge_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InCharge Checkbox</label>
    <type>Checkbox</type>
</CustomField>