unpackaged/main/default/objects/Account/fields/ITRS_Group_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ITRS_Group_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ITRS_Group_Checkbox</description>
    <label>ITRS Group Checkbox</label>
    <type>Checkbox</type>
</CustomField>