unpackaged/main/default/objects/Account/fields/Lotlinx_Demo__c.field-meta.xml
<CustomField>
    <fullName>Lotlinx_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lotlinx Demo</label>
    <type>Checkbox</type>
</CustomField>