unpackaged/main/default/objects/Account/fields/MCE_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>MCE_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCE Checkbox</label>
    <type>Checkbox</type>
</CustomField>