unpackaged/main/default/objects/Account/fields/MOL_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>MOL_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOL Checkbox</label>
    <type>Checkbox</type>
</CustomField>