unpackaged/main/default/objects/Account/fields/More_Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>More_Churn_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More Churn Risk</label>
    <type>Checkbox</type>
</CustomField>