unpackaged/main/default/objects/Account/fields/Pipeline_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pipeline checkbox</description>
    <label>Pipeline checkbox</label>
    <type>Checkbox</type>
</CustomField>