unpackaged/main/default/objects/Account/fields/Pipeline_demonstration__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_demonstration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipeline demonstration</label>
    <type>Checkbox</type>
</CustomField>