unpackaged/main/default/objects/Account/fields/Pipelinetest__c.field-meta.xml
<CustomField>
    <fullName>Pipelinetest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pipeline test</description>
    <label>Pipelinetest</label>
    <type>Checkbox</type>
</CustomField>