unpackaged/main/default/objects/Account/fields/Release_checkbox_1__c.field-meta.xml
<CustomField>
    <fullName>Release_checkbox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release checkbox 1</label>
    <type>Checkbox</type>
</CustomField>