unpackaged/main/default/objects/Account/fields/Release_checkbox_2__c.field-meta.xml
<CustomField>
    <fullName>Release_checkbox_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release checkbox 2</label>
    <type>Checkbox</type>
</CustomField>