unpackaged/main/default/objects/Account/fields/release_checkbox_3__c.field-meta.xml
<CustomField>
    <fullName>release_checkbox_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>release checkbox 3</label>
    <type>Checkbox</type>
</CustomField>