unpackaged/main/default/objects/Account/fields/SBX_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>SBX_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SBX Checkbox</label>
    <type>Checkbox</type>
</CustomField>