unpackaged/main/default/objects/Account/fields/Smyle_Demo__c.field-meta.xml
<CustomField>
    <fullName>Smyle_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smyle Demo</label>
    <type>Checkbox</type>
</CustomField>