unpackaged/main/default/objects/Account/fields/Symple_Lending_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Symple_Lending_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Symple Lending Checkbox</label>
    <type>Checkbox</type>
</CustomField>