unpackaged/main/default/objects/Account/fields/Tauck_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Tauck_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tauck Checkbox</label>
    <type>Checkbox</type>
</CustomField>