unpackaged/main/default/objects/Account/fields/UniSuper_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>UniSuper_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UniSuper Checkbox</label>
    <type>Checkbox</type>
</CustomField>