unpackaged/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <description>The VAT registration number for this account, entered by sales reps and validated externally against a VAT checking service.</description>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>