unpackaged/main/default/objects/Account/fields/VAT_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>VAT_Validation_Date__c</fullName>
    <description>The date and time when the VAT number was last validated against the external service.</description>
    <label>VAT Validation Date</label>
    <type>DateTime</type>
</CustomField>