unpackaged/main/default/objects/Account/fields/VAT_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>VAT_Validation_Message__c</fullName>
    <description>The message returned by the external VAT validation service, providing detail on why a number passed or failed validation.</description>
    <label>VAT Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>