unpackaged/main/default/objects/Account/fields/VAT_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>VAT_Validation_Status__c</fullName>
    <description>The current validation state of the VAT number as determined by the external validation service. Used by finance to identify accounts requiring manual correction.</description>
    <label>VAT Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>