unpackaged/main/default/objects/Account/fields/YLA_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>YLA_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YLA Checkbox</label>
    <type>Checkbox</type>
</CustomField>