unpackaged/main/default/objects/Account/validationRules/Employee_Count_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Count_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>NumberOfEmployees &lt; 0</errorConditionFormula>
    <errorMessage>Employee count can&#39;t be negative.</errorMessage>
</ValidationRule>